--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
+    "react-router": "^7.3.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
