--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
+    "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
