--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.0.14",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.8.4",
+    "lucide-react": "^0.525.0",
+    "motion": "^12.23.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
